--- a/codesnippets/index.html
+++ b/codesnippets/index.html
@@ -8,20 +8,16 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>JSC Sports Website</title>
   </head>
   <body>
-    {% include 'includes/topnav.html' %}
+    <!-- The navbar should be placed -->
+    <br>
+    <br>
     <div class="container-lg">
-        {% include 'includes/scores.html' %}
+		<!-- The scores of the games should be placed -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
-    <style>
-      body {
-      background-color: #212121;
-      color: white
-      }
-    </style>
 </html>
